--- a/styles.css
+++ b/styles.css
@@ -31,5 +31,7 @@ body {
   left: 0;
   width: 100%; 
   height: 100%; 
-  visibility: hidden;
+  /* visibility: hidden; */
+  opacity: 0.0;
+  transition: opacity 12s;
 }
