--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
   width: 100%; 
   height: 100%; 
   /* visibility: hidden; */
-  opacity: 0.0;
+  /* opacity: 0.0; */
+  opacity: 1.0;
   transition: opacity 12s;
 }
