--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,6 @@ body {
   background-color: #222; 
 }
 
-#pausedText {
-  position: absolute;
-  font-size: 50px;
-  color: white;
-}
-
 .hidden {
   display: none;
 }
@@ -25,15 +19,35 @@ body {
   height: 100vh;          /* Example: Set a height for vertical centering */
 }
 
+#my-container {
+  position: relative;
+  width: 1280px;
+  height: 720px;
+}
+
 .my-video {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%; 
-  height: 100%; 
-  /* visibility: hidden; */
-  /* opacity: 0.0; */
-  opacity: 1.0;
-  transition: opacity 12s;
+  width: 100%;
+  height: 100%;
+  transition: opacity 6s ease; /* for dissolve */
+  opacity: 0;
+  pointer-events: none; /* let clicks pass through the invisible video */
   background-color: #000; 
+}
+
+.my-video.active {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+#pausedText {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 50px;
+  display: none;
 }
